--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -7,21 +7,31 @@ Collapsed=0
 Pos=713,21
 Size=550,698
 Collapsed=0
+DockId=0x00000002,0
 
-[Window][Edge Engine]
-Pos=705,22
-Size=550,680
+[Window][Bugame Engine]
+Pos=173,161
+Size=250,250
 Collapsed=0
+DockId=0x00000003,0
 
-[Window][hello]
-Pos=545,159
+[Window][Hello, world!]
+Pos=117,111
 Size=346,270
 Collapsed=0
 
-[Window][About]
-Pos=670,20
-Size=600,700
-Collapsed=1
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][hello]
+Pos=60,60
+Size=65,48
+Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=524,60 Size=791,955 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,484 Selected=0xE87781F4
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,194 Selected=0x1DAFF6FF
 
