--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1,6
+Pos=60,60
 Size=400,400
 Collapsed=0
 
@@ -9,25 +9,20 @@ Size=550,698
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Bugame Engine]
+[Window][Edge Engine]
 Pos=173,161
 Size=250,250
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Hello, world!]
-Pos=117,111
-Size=346,270
+Pos=60,60
+Size=191,48
 Collapsed=0
 
 [Window][Example: Log]
 Pos=60,60
 Size=500,400
-Collapsed=0
-
-[Window][hello]
-Pos=60,60
-Size=65,48
 Collapsed=0
 
 [Docking][Data]
