--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=713,21
-Size=550,698
+Pos=524,60
+Size=791,680
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Edge Engine]
-Pos=173,161
+[Window][Motor8]
+Pos=524,742
 Size=250,250
 Collapsed=0
 DockId=0x00000003,0
@@ -23,6 +23,11 @@ Collapsed=0
 [Window][Example: Log]
 Pos=60,60
 Size=500,400
+Collapsed=0
+
+[Window][hello]
+Pos=60,60
+Size=65,48
 Collapsed=0
 
 [Docking][Data]
