--- a/Motor8/3D Physics.vcxproj
+++ b/Motor8/3D Physics.vcxproj
@@ -41,12 +41,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)SDL\include;$(SolutionDir)SDL_mixer\include;$(SolutionDir)Degub;$(SolutionDir)ImGui;$(SolutionDir)glew\glew-2.2.0\include\GL;$(SolutionDir)MathGeo\src\Time;$(SolutionDir)MathGeo\src\Math;$(SolutionDir)MathGeo\src\Geometry;$(SolutionDir)MathGeo\src\Algorithm;$(SolutionDir)MathGeo\;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)SDL\include;$(SolutionDir)SDL_mixer\include;$(SolutionDir)Degub;$(SolutionDir)ImGui;$(SolutionDir)glew\glew-2.2.0\include\GL;$(SolutionDir)MathGeo\src\Time;$(SolutionDir)MathGeo\src\Math;$(SolutionDir)MathGeo\src\Geometry;$(SolutionDir)MathGeo\src\Algorithm;$(SolutionDir)MathGeo\;$(SolutionDir)json;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)SDL\libx86;$(SolutionDir)SDL_mixer\libx86;$(SolutionDir)Debug;$(SolutionDir)glew\glew-2.2.0\lib;$(SolutionDir)ImGui;$(SolutionDir)Bugame\MathGeo\lib;$(LibraryPath)</LibraryPath>
-    <TargetName>Motor8</TargetName>
+    <TargetName>Bugame</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)SDL\include;$(SolutionDir)SDL_mixer\include;$(SolutionDir)Degub;$(SolutionDir)ImGui;$(SolutionDir)glew\glew-2.2.0\include\GL;$(SolutionDir)MathGeo\src\Time;$(SolutionDir)MathGeo\src\Math;$(SolutionDir)MathGeo\src\Geometry;$(SolutionDir)MathGeo\src\Algorithm;$(SolutionDir)MathGeo\;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)SDL\include;$(SolutionDir)SDL_mixer\include;$(SolutionDir)Degub;$(SolutionDir)ImGui;$(SolutionDir)glew\glew-2.2.0\include\GL;$(SolutionDir)MathGeo\src\Time;$(SolutionDir)MathGeo\src\Math;$(SolutionDir)MathGeo\src\Geometry;$(SolutionDir)MathGeo\src\Algorithm;$(SolutionDir)MathGeo\;$(SolutionDir)json;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)SDL\libx86;$(SolutionDir)SDL_mixer\libx86;$(SolutionDir)Debug;$(SolutionDir)glew\glew-2.2.0\lib;$(SolutionDir)ImGui;$(SolutionDir)Bugame\MathGeo\lib;$(LibraryPath)</LibraryPath>
     <TargetName>Bugame</TargetName>
   </PropertyGroup>
@@ -100,6 +100,8 @@
     <ClInclude Include="ImGui\imstb_rectpack.h" />
     <ClInclude Include="ImGui\imstb_textedit.h" />
     <ClInclude Include="ImGui\imstb_truetype.h" />
+    <ClInclude Include="JsonParsing.h" />
+    <ClInclude Include="json\parson.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="ModuleCamera3D.h" />
     <ClInclude Include="ModuleRenderer3D.h" />
@@ -128,6 +130,8 @@
     <ClCompile Include="ImGui\imgui_impl_sdl.cpp" />
     <ClCompile Include="ImGui\imgui_tables.cpp" />
     <ClCompile Include="ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="JsonParsing.cpp" />
+    <ClCompile Include="json\parson.c" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
