--- a/Motor8/3D Physics.vcxproj.filters
+++ b/Motor8/3D Physics.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Sources\Menus\UI">
       <UniqueIdentifier>{911eae66-75de-48c6-a2f8-32d701725584}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Tools\Json">
+      <UniqueIdentifier>{6ad6fc67-a1d8-46ac-8069-4f4f1d1cb040}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -114,6 +117,12 @@
     <ClInclude Include="AboutMenu.h">
       <Filter>Sources\Menus</Filter>
     </ClInclude>
+    <ClInclude Include="JsonParsing.h">
+      <Filter>Sources\Tools\Json</Filter>
+    </ClInclude>
+    <ClInclude Include="json\parson.h">
+      <Filter>Sources\Tools\Json</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -187,6 +196,12 @@
     </ClCompile>
     <ClCompile Include="AboutMenu.cpp">
       <Filter>Sources\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="JsonParsing.cpp">
+      <Filter>Sources\Tools\Json</Filter>
+    </ClCompile>
+    <ClCompile Include="json\parson.c">
+      <Filter>Sources\Tools\Json</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
