--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -1,23 +1,23 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=1,6
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=524,60
-Size=791,680
+Pos=713,21
+Size=550,698
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Motor8]
-Pos=524,742
+[Window][Motor8 Engine]
+Pos=173,161
 Size=250,250
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Hello, world!]
-Pos=60,60
-Size=191,48
+Pos=117,111
+Size=346,270
 Collapsed=0
 
 [Window][Example: Log]
