Cosas extras hechas (Vsync)

--- a/Motor8/.gitignore
+++ b/Motor8/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+*.dll
+!lib/*.dll
+
+!glew\glew-2.2.0\lib\glew32.lib
+!glew\glew-2.2.0\lib\glew32s.lib
+
 # User-specific files
 *.rsuser
 *.suo
