--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -16,7 +16,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Hello, world!]
-Pos=117,111
+Pos=545,159
 Size=346,270
 Collapsed=0
 
@@ -28,6 +28,9 @@ Collapsed=0
 [Window][hello]
 Pos=60,60
 Size=65,48
+Collapsed=0
+
+[Window][About]
 Collapsed=0
 
 [Docking][Data]
