--- a/Motor8/Game/imgui.ini
+++ b/Motor8/Game/imgui.ini
@@ -1,6 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=670,20
 Size=400,400
+Collapsed=0
+
+[Window][About]
+Pos=162,59
+Size=600,700
 Collapsed=0
 
 [Docking][Data]
