--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1,6
+Pos=670,20
 Size=400,400
 Collapsed=0
 
@@ -31,7 +31,9 @@ Size=65,48
 Collapsed=0
 
 [Window][About]
-Collapsed=0
+Pos=-1,19
+Size=600,700
+Collapsed=1
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=524,60 Size=791,955 Split=Y
