--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=670,20
+Pos=1,6
 Size=400,400
 Collapsed=0
 
@@ -7,36 +7,26 @@ Collapsed=0
 Pos=713,21
 Size=550,698
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Motor8]
-Pos=173,161
-Size=250,250
+Pos=705,22
+Size=550,680
 Collapsed=0
-DockId=0x00000003,0
 
-[Window][Hello, world!]
+[Window][hello]
 Pos=545,159
 Size=346,270
 Collapsed=0
 
-[Window][Example: Log]
-Pos=60,60
-Size=500,400
-Collapsed=0
-
-[Window][hello]
-Pos=60,60
-Size=65,48
-Collapsed=0
-
 [Window][About]
-Pos=-1,19
+Pos=670,20
 Size=600,700
+Collapsed=0
+
+[Window][ImGui Settings]
+Pos=-1,20
+Size=486,478
 Collapsed=1
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=524,60 Size=791,955 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,484 Selected=0xE87781F4
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,194 Selected=0x1DAFF6FF
 
