--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -26,7 +26,12 @@ Collapsed=0
 [Window][ImGui Settings]
 Pos=-1,20
 Size=486,478
-Collapsed=1
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=670,20
+Size=600,700
+Collapsed=0
 
 [Docking][Data]
 
