--- a/Motor8/3D Physics.vcxproj
+++ b/Motor8/3D Physics.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="DevIL.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Hierarchy.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
     <ClInclude Include="ImGui\imgui_impl_opengl2.h" />
@@ -102,6 +103,7 @@
     <ClInclude Include="ImGui\imstb_rectpack.h" />
     <ClInclude Include="ImGui\imstb_textedit.h" />
     <ClInclude Include="ImGui\imstb_truetype.h" />
+    <ClInclude Include="Inspector.h" />
     <ClInclude Include="JsonParsing.h" />
     <ClInclude Include="json\parson.h" />
     <ClInclude Include="Light.h" />
@@ -212,6 +214,7 @@
     <ClCompile Include="AssimpDefs.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="glmath.cpp" />
+    <ClCompile Include="Hierarchy.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
     <ClCompile Include="ImGui\imgui_demo.cpp" />
     <ClCompile Include="ImGui\imgui_draw.cpp" />
@@ -219,6 +222,7 @@
     <ClCompile Include="ImGui\imgui_impl_sdl.cpp" />
     <ClCompile Include="ImGui\imgui_tables.cpp" />
     <ClCompile Include="ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="Inspector.cpp" />
     <ClCompile Include="JsonParsing.cpp" />
     <ClCompile Include="json\parson.c" />
     <ClCompile Include="Light.cpp" />
@@ -306,6 +310,7 @@
     <ClCompile Include="ModuleCamera3D.cpp" />
     <ClCompile Include="ModuleComponent.cpp" />
     <ClCompile Include="ModuleComponentMaterial.cpp" />
+    <ClCompile Include="ModuleComponentMesh.cpp" />
     <ClCompile Include="ModuleComponentTransform.cpp" />
     <ClCompile Include="ModuleFBXLoader.cpp" />
     <ClCompile Include="ModuleFileSystem.cpp" />
