--- a/Motor8/imgui.ini
+++ b/Motor8/imgui.ini
@@ -29,13 +29,18 @@ Size=486,478
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=670,20
-Size=600,700
+Pos=0,20
+Size=300,550
 Collapsed=0
 
 [Window][WORKS]
 Pos=60,60
 Size=159,190
+Collapsed=0
+
+[Window][Inspector]
+Pos=980,20
+Size=300,550
 Collapsed=0
 
 [Docking][Data]
