--- a/Motor8/3D Physics.vcxproj
+++ b/Motor8/3D Physics.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="ModuleComponentMaterial.h" />
     <ClInclude Include="ModuleComponentMesh.h" />
     <ClInclude Include="ModuleComponentTransform.h" />
+    <ClInclude Include="ModuleConsole.h" />
     <ClInclude Include="ModuleFBXLoader.h" />
     <ClInclude Include="ModuleFileSystem.h" />
     <ClInclude Include="ModuleGameObject.h" />
@@ -312,6 +313,7 @@
     <ClCompile Include="ModuleComponentMaterial.cpp" />
     <ClCompile Include="ModuleComponentMesh.cpp" />
     <ClCompile Include="ModuleComponentTransform.cpp" />
+    <ClCompile Include="ModuleConsole.cpp" />
     <ClCompile Include="ModuleFBXLoader.cpp" />
     <ClCompile Include="ModuleFileSystem.cpp" />
     <ClCompile Include="ModuleGameObject.cpp" />
